--- a/package.json
+++ b/package.json
@@ -1,24 +1,36 @@
 {
   "name": "sarasota-florida-tutoring-services",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "A fictional tutor's site for the Sarasota FL area.",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/cireneirbo/sarasota-florida-tutoring-services.git"
-  },
-  "keywords": [
-    "react",
-    "javascript",
-    "node"
-  ],
   "author": "Eric O'Brien",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/cireneirbo/sarasota-florida-tutoring-services/issues"
+  "private": true,
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1"
   },
-  "homepage": "https://github.com/cireneirbo/sarasota-florida-tutoring-services#readme"
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
