--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "A fictional tutor's site for the Sarasota FL area.",
   "author": "Eric O'Brien",
   "license": "MIT",
+  "homepage": "https://cireneirbo.github.io/sarasota-florida-tutoring-services",
   "private": true,
   "dependencies": {
+    "gh-pages": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1"
@@ -13,6 +15,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
